# XYZ-Marketing-Campaign

./: .gitignore  README.md  Senior Role Task.docx  mlflow.sh  pyproject.toml  requirements.txt
data/: 01_clean_data.csv  02_engineered_data.csv  media_contacts.csv
data/raw/: socio_demos.csv
docs/: Senior-Role-Task.md
models/: 03_best_gb.pkl  3.2_best_rf.pkl  3.3_best_gb.pkl  3.4_best_linear_svc.pkl
notebooks/: 01_NIQ_Task_data_cleaning&prep.ipynb  01_NIQ_Task_data_cleaning.ipynb  01_XYZ_campaign_data_cleaning.ipynb  02_NIQ_Task_feature_engineering.ipynb  02_XYZ_campaign_feature_engineering.ipynb  03_NIQ_Task_EDA.ipynb  03_XYZ_campaign_EDA.ipynb  04_NIQ_Task_Modeling.ipynb  04_XYZ_campaign_predictive_modeling.ipynb  NIQ_Task.ipynb  NIQ_Task_EDA.ipynb  NIQ_Task_Modeling.ipynb  NIQ_Task_cleaning_&_engineering.ipynb
reports/: Campaign Analysis Summary and Recommendations.txt  FINDINGS.md  example_report
src/: utils.py
task/: ~$nior Role Task.docx
