
[project]
name = "xyz-marketing-campaign-analysis"
version = "0.1.0"
description = "Data science analysis of an advertising campaign: EDA, modeling, and actionable insights using Python."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
    {name = "Kristiyan Bonev", email = "k.s.bonev@gmail.com"}
]
dependencies = [
    "ipykernel (>=7.0.0,<8.0.0)",
    "pandas (>=2.1.0,<4.0.0)",
    "seaborn (>=0.13.0,<0.14.0)",
    "scikit-learn (>=1.5.0,<3.0.0)",
    "xgboost (>=2.1.0,<4.0.0)",
    "dill (>=0.3.7,<0.4.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "mlflow (>=2.10.0,<3.0.0)",
    "pyprojroot (>=0.2.0,<0.4.0)"
]